/' Development notes
TODO: Check attributes, types and methods
Assumptions: Age verification and payments are managed by external services
Enhancement: Manage the payment type
Enhancement: Extract the location from the event
Enhancement: Abstract people (user, competitor)
Enhancement: Add template for odds
Enhancement: Fix UML organisation for better readability
Enhancement: Remove TimeZone class and replaced by a local attribute
Enhancement: Remove Countries class and replaced by a local attribute
'/

@startuml "CDA Bet Class Diagram"
hide empty members
skinparam linetype ortho
caption CDA Bet Class Diagram
footer Joël L & Bertrand C & Etienne S
header Last updated 09/02/2021
title CDA Bet

namespace CdaBet {
    ' Need for a class/markup between Team/Competitor and Event?
    class Event {
        -String name
        -Date date
        -String timeZone
        -String country
        -String location
        -String illustration
        -Int Score
    }

    class Competition {
        -String name
    }

    ' Abstract class for people to extend
    class Competitor {
        -String name
        -String country
    }

    class Team {
        -String name
        -string country
        -String description
    }

    ' Hold the odds for the event
    class Odds {
        -String description
        -Float value
        -Bool winning
    }

    class Sport {
        -String name
        -String description
    }

    ' Could be an enumeration: individual or team
    class SportType {
        -String name
        -String description
    }

    ' Manage the website user
    ' Abstract class for people to extend later
    class User {
        -Array roles
        ..Personal data..
        -String email
        -String password
        -String lastname
        -String firstName
        -Date birthdate
        -String country
        -String timeZone
        -String gender
        -String address
        -String city
        -Int postcode
        -Int phonenumber
        ..Dates..
        -Date createdAt
        -Date|null activatedAt
        -Date|null suspendedAt
        -Date|null deletedAt
        ..Status..
        -Bool activated
        -Bool suspended
        -Bool deleted
    }

    class Wallet {
        -Int balance
        #credit()
        #debit(balance)
        #history()
    }

    class Bet {
        -Int amount
        -Float odds
        -Bool resolved
        +make()
        +resolve()
    }

    class BetPayment {
        -Int amount
        -Date date
        -String description
        +make()
        +cancel(transactionID)
    }

    class WalletPayment {
        -Int amount
        -Date date
        -String transactionID
    }

    class Status {
        -String name
        -String description
    }

    class CompetitorTeamStatus {
        -Date date
    }

    ' Relationships
    'TODO Review and fix cardinalities
    Event "0" -up- "1" Sport : has >
    Event "0..n" - "1..n" SportType : has >
    Sport "0..n" o- "1..n" SportType : specifies <

    Competition "1..n" *-up- "1..n" Event : contain >

    Competition "0..1" *-- "1..n" Competition : contain >

    Competitor "2..n" --o "0..n" Team : is in >
    Team "2..n" -- "0..n" Event : has <

    Competitor "2..n" - "0..n" Event: has <

    CompetitorTeamStatus "0..n" - "1" Status : specifies <
    (Competitor, Team) *.. CompetitorTeamStatus

    'TODO END

    Event "1" *-- "1..n" Odds : has >

    Odds "0..n" -down- "1" User : choose <
    (Odds, User) *.. Bet

    Bet "1" *- "1..2" BetPayment : specifies <

    Wallet "1" -left-* "1" User : has <
    Wallet "1" *- "0..n" WalletPayment : specifies <
}
@enduml

@startuml "CDA Bet Component Diagram"
hide empty members
skinparam linetype ortho
caption CDA Bet Component Diagram
footer Joël L & Bertrand C
header Last updated 18/11/2020
title CDA Bet

HTTP - [traefik]
[traefik] - [php]
[traefik] - [phpmyadmin]
[traefik] - [mailhog]
[php] - [mysql]
[phpmyadmin] - [mysql]
[php] - [composer]
@enduml

@startmindmap "CDA Bet Mind Map"
* CDA Bet
** Class
** Actions
*** Sign up
*** Sign in
*** Log out
*** Show user profile
*** Show bet history
*** Credit wallet
*** Debit wallet
*** Show transactions history
*** Show events by category
*** Show Bets
*** Make a bet
** Components
*** Symfony
*** PHPStan
** Quality
@endmindmap
